<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Busão Paulistano</string>
    <string name="title_activity_pega_cida">Busão Paulistano</string>
    <string name="title_activity_mostra_web">Busão Paulistano</string>
    <string name="action_tips">tips</string>
    <string name="action_map">map</string>
    <string name="action_refresh">refresh</string>
    <string name="action_about">about</string>
    <string name="action_idioma">Set English</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="no_gps_support">GPS provider not supported</string>
    <string name="no_network_support">Network provider not supported</string>
    <string name="locationfind">location to find (click button)</string>
    <string name="searchanother">search new location</string>
    <string name="carregando">getting your location</string>
    <string name="carregandooutro">getting new location</string>
    <string name="carregandoplaces">Procurando paradas...</string>
    <string name="carregandoselecionado">loading selected place</string>
    <string name="carregandoplacesfs">loading recommended places from Yelp and Foursquare</string>
    <string name="interneterror">Internet Connection Error</string>
    <string name="interneterrorpede">Please connect to working Internet connection</string>
    <string name="localindisponivel">Location not available</string>
    <string name="localdigita">You did not enter a location to find</string>
    <string name="cidadigita">You did not enter a city name to find</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_sobre">About</string>
    <string name="title_activity_pega_sugestao">Foursquare and Yelp recommended places nearby</string>
    <string name="title_activity_mapa_geral">Map</string>
    <string name="title_activity_detalhe_fs">Selected place</string>
    <string name="title_activity_foto_fs">Foursquare Photos</string>
    <string name="title_activity_foto_go">Google photos</string>
    <string name="title_activity_tips_fs">Foursquare reviews</string>
    <string name="title_activity_tips_go">Google reviews</string>
    <string name="carregandofotos">loading photos</string>
    <string name="carregandoreviews">loading reviews</string>
    <string name="title_activity_foto_nk">Nokia photos</string>
    <string name="title_activity_foto_grande">Photo selected</string>
    <string name="title_activity_tab_det">Place selected</string>
    <string name="semfoto">no photo from this place</string>
    <string name="semtips">no reviews from this place</string>
    <string name="semfotocab">Photos</string>
    <string name="semtipscab">Reviews</string>
    <string name="mapatab">Map</string>
    <string name="fototab">Photos</string>
    <string name="tipstab">Reviews</string>
    <string name="sugetab">Tips</string>
    <string name="politica">privacy policy</string>
    <string name="google">data from Google</string>
    <string name="foursquare">data from Foursquare</string>
    <string name="nokia">data from Nokia</string>
    <string name="yelp">data from Yelp</string>
    <string name="title_activity_detalhe_yelp">DetalheYelpActivity</string>
    <string name="action_settings">Configuração</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_foto_yelp">FotoYelpActivity</string>
    <string name="title_activity_web_tips">Web Tips</string>
    <string name="title_activity_mostra_linha">Linhas desta parada</string>
    <string name="title_activity_marker_demo">MarkerDemoActivity</string>
    <string name="title_activity_mapa_parada">Ônibus da linha selecionada</string>
    <string name="title_activity_mapa_monitora">Monitoramento do ônibus selecionado</string>
    <string name="title_activity_mostra_posicao">Configuração</string>
    <string name="prompttitle">Pesquisa paradas de uma linha</string>
    <string name="promptmens">Informe o código da linha com 7 dígitos. (Ex: 1756-10)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="carregafavoritos">Procurando favoritos...</string>
    <string name="excluifavoritos">Excluindo favorito...</string>
    <string name="title_activity_mostra_parada_linha">Mostra Paradas da Linha</string>
    <string name="pref_send_report">Tocar buzina</string>
    <string name="pref_send_report_summary">Buzinar na aproximação do ônibus</string>
    <string name="pref_sync_frequency">Vibrar</string>
    <string name="pref_sync_frequency_summary">Vibrar na aproximação do ônibus</string>
    <string name="pref_user_name">Email</string>
    <string name="pref_user_name_summary">Informe o seu e-mail</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Habilitar/desabilitar funções</string>
    <string name="menu_settings">Configuração</string>
    <string name="carregandoopçoes">Buscando opções para este mesmo trajeto.</string>
    <string name="carregandoparadaslinha">Carregando paradas da linha informada.</string>
    <string name="ajuda">Ajuda</string>
    <string name="title_activity_mapa_geral_ok">Mapa das paradas próximas</string>
    <string name="iniciando">Determinando a sua localização..</string>
    <string name="title_activity_mapa_sel_local">Seleção de uma nova localização</string>
    <string name="linhasparada">Obtendo linhas e ônibus desta parada.</string>
    <string name="title_activity_mostra_search_linhas">Pesquisa linhas(código ou nome)</string>
    <string name="title_activity_mostra_itinerario">MostraItinerarioActivity</string>
    <string name="itinerario">Redirecionando para o site do SPTrans: Itinerário da linha selecionada.</string>
    <string name="title_activity_mostra_trajeto">Pesquisar trajetos</string>
    <string name="title_activity_mostra_trajeto_lista">Trajeto sugerido</string>
    <string name="buscando_trajeto">Pesquisando trajetos...</string>
    <string name="semparadaslinha">Sem paradas monitoradas para esta linha no sistema da SPTRANS...</string>
    <string name="pesqlinha">Pesquisando linhas...</string>
    <string name="title_activity_mapa_trajeto_linha">Paradas da Linha: </string>
    <string name="action_mapa">mapa</string>
   <string name="urlreview">Avalie este aplicativo</string>
</resources>
