<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_name"
                android:summary="@string/pref_user_name_summary"
                android:inputType="phone"
                android:key="prefUsername"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
       <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSyncFrequency2"
            android:summary="@string/pref_sync_frequency_summary"
            android:title="@string/pref_sync_frequency" >
        </CheckBoxPreference>
        </PreferenceCategory>
</PreferenceScreen>

