<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sobre_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SobreActivity" >

    
    
    
    
     <Button
        android:id="@+id/bajuda"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="ajudaClick"
        android:layout_marginTop="210dp"
        android:text="@string/ajuda" />   
    
    
    
    
    
    
    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="privaClick"
        android:layout_marginTop="250dp"
        android:text="@string/politica" />   
        
    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="urlClick"
        android:layout_marginTop="290dp"
        android:text="@string/urlreview" />   
    
    

     
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:textSize="12px"
        android:text="versão 13: abreu@abreuretto.com" />


   
</RelativeLayout>
